--- a/app/src/main/res/layout/activity_academic.xml
+++ b/app/src/main/res/layout/activity_academic.xml
@@ -22,7 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="bottom"
-                android:background="@color/trans"
+                android:scrollbars="none"
+                android:fillViewport="true"
                 app:pstsPaddingMiddle="true" />
 
         </FrameLayout>
