--- a/app/src/main/res/layout/activity_cafeteria.xml
+++ b/app/src/main/res/layout/activity_cafeteria.xml
@@ -1,34 +1,28 @@
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pager"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    <android.support.v4.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        tools:context="com.techhab.collegeapp.CafeteriaActivity" >
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
-        <!--
-        <fragment android:name="com.techhab.collegeapp.RichardsonMenuFragment"
-            android:id="@+id/richardsonBreakfastFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        <fragment android:name="com.techhab.collegeapp.RichardsonMenuLunch"
-            android:id="@+id/richardsonLunchFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        <fragment android:name="com.techhab.collegeapp.RichardsonMenuDinner"
-            android:id="@+id/richardsonDinnerFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-            -->
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
 
-        <!--Home Navigation Drawer-->
-        <fragment android:id="@+id/home_navigation_drawer"
-            android:layout_width="@dimen/navigation_drawer_width"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:name="com.techhab.collegeapp.NavigationDrawerFragment" />
-    </android.support.v4.widget.DrawerLayout>
-</android.support.v4.view.ViewPager>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_above="@id/toolbar"
+        android:background="@android:color/white"
+        android:layout_below="@+id/toolbar">
+
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/pager_tab_strip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:textColor="@android:color/holo_blue_light"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp" />
+    </android.support.v4.view.ViewPager>
+</RelativeLayout>
