--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -1,33 +1,55 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.techhab.collegeapp.FoodActivity" >
+    android:layout_height="match_parent">
 
-    <!-- The main content view -->
-    <FrameLayout
-        android:id="@+id/content_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <!--
-    <fragment android:name="com.techhab.collegeapp.LogInFragment"
-        android:id="@+id/loggedOutHomeFragment"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/fragment_log_in" />
-        -->
+        android:orientation="vertical">
+        <FrameLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white">
+
+            <include
+                android:id="@+id/toolbar"
+                layout="@layout/toolbar" />
+
+            <com.techhab.collegeapp.PagerSlidingTabStrip
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="bottom"
+                android:background="@color/trans"
+                app:pstsPaddingMiddle="true" />
+
+        </FrameLayout>
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                tools:context=".FoodActivity"/>
 
 
-    <!--Navigation Drawer-->
-    <!--
+    </LinearLayout>
     <fragment android:id="@+id/home_navigation_drawer"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:name="com.techhab.collegeapp.NavigationDrawerFragment" />
-    -->
+    <!--<ListView
+        android:id="@+id/listview_drawer"
+        android:layout_width="260dp"
+        android:layout_height="match_parent"
+        android:divider="@null"
+        android:layout_gravity="start"
+        android:descendantFocusability="blocksDescendants"
+        android:background="@android:color/background_light"
+        android:choiceMode="singleChoice" />-->
 
 </android.support.v4.widget.DrawerLayout>
-
