--- a/app/src/main/res/layout/card_divider.xml
+++ b/app/src/main/res/layout/card_divider.xml
@@ -2,6 +2,8 @@
 <View
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="1dp"
+    android:layout_height="0.75dp"
     android:background="@color/black"
-    android:alpha="0.12" />
+    android:alpha="0.12"
+    android:paddingLeft="-16dp"
+    android:paddingRight="-16dp"/>
