--- a/app/src/main/res/layout/fragment_basketball.xml
+++ b/app/src/main/res/layout/fragment_basketball.xml
@@ -26,9 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/game_in_progress"
-                android:fontFamily="sans-serif-light"
-                android:textColor="@color/primary_text_default_material_light"
-                android:textSize="24sp" />
+                style="@style/CardTitle" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -91,7 +89,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/secondary_text_default_material_light"
-                        android:text="Western Michigan University" />
+                        android:text="Western Mich." />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -102,7 +100,7 @@
                         android:text="Broncos"
                         />
 
-                </LinearLayout>
+                    </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="fill_parent"
@@ -180,6 +178,64 @@
 
         </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/upcoming_games_card"
+        android:layout_gravity="top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        style="@style/CardView" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:descendantFocusability="blocksDescendants"
+            android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:descendantFocusability="blocksDescendants"
+            android:layout_margin="16dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/upcoming_games"
+                style="@style/CardTitle" />
+
+            </LinearLayout>
+
+            <include layout="@layout/card_divider" />
+
+            <ListView
+                android:id="@+id/upcoming_games_listview"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"/>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:gravity="right|center_vertical"
+                android:orientation="horizontal">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/ButtonFlatMaterial"
+                    android:textColor="@color/kzooOrange"
+                    android:text="VIEW MORE"/>
+
+                </LinearLayout>
+
+        </LinearLayout>
+
+
+
+        </android.support.v7.widget.CardView>
+
+
     <!-- Schedule/Results Card -->
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -192,23 +248,35 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:descendantFocusability="blocksDescendants"
-            android:layout_margin="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:orientation="vertical">
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/schedule_results"
-                android:textColor="@color/primary_text_default_material_light"
-                android:fontFamily="sans-serif-light"
-                android:textSize="24sp" />
+                android:text="@string/results"
+                style="@style/CardTitle" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                style="@style/CardSubtitle"
+                android:text="2014-2015 Season"/>
 
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp">
+                android:layout_marginTop="5dp">
 
                 <TableRow
                     android:id="@+id/schedule_table_header"
@@ -373,10 +441,63 @@
                 </TableLayout>
 
 
+            <TableLayout
+                android:id="@+id/schedule_table_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp">
 
 
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:weightSum="1">
 
-        </LinearLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.15"
+                        android:text="@string/date" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.65"
+                        android:text="@string/opponent" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.2"
+                        android:text="@string/result" />
+
+                    </TableRow>
+
+                </TableLayout>
+
+            </LinearLayout>
+
+            <include layout="@layout/card_divider" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:gravity="right|center_vertical"
+                android:orientation="horizontal">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/ButtonFlatMaterial"
+                    android:textColor="@color/kzooOrange"
+                    android:text="VIEW MORE"/>
+
+                </LinearLayout>
+
+
+    </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 
@@ -400,9 +521,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/roster"
-                android:textColor="@color/primary_text_default_material_light"
-                android:fontFamily="sans-serif-light"
-                android:textSize="24sp" />
+                style="@style/CardTitle" />
 
 
             <!--<include layout="@layout/card_divider" />-->
