--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,4 +76,13 @@
           but setting this also changes the popup menu's background,
           even if we define popupTheme for our <Toolbar> -->
     <!-- <item name="android:background">@color/color_primary</item> -->
+
+    <style name="CardTitle">
+        <item name="android:textColor">@color/primary_text_default_material_light</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="ButtonFlatMaterial" parent="android:Widget.Material.Button.Borderless" />
+
 </resources>
