--- a/app/src/main/res/layout/fragment_cafeteria.xml
+++ b/app/src/main/res/layout/fragment_cafeteria.xml
@@ -16,162 +16,145 @@
             android:layout_height="wrap_content"
             android:showDividers="middle"
             android:divider="?android:dividerHorizontal">
-
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:orientation="vertical">
-                <RelativeLayout
-                    android:id="@+id/btn_cafeteria_welles"
-                    android:layout_width="fill_parent"
+            <LinearLayout android:id="@+id/fragment_careteria_llHeader"
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:background="@color/green"
+                android:padding="10dp"
+                android:layout_height="wrap_content">
+                <TextView android:id="@+id/fragment_cafeteria_tvInfo"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/btn_whitebackground"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:id="@+id/tv01"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:text="@string/label_cafeteria_welles"
-                        android:textSize="18dp"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"
-                        android:layout_alignParentTop="true"/>
-                    <TextView android:id="@+id/tvWellesCafe"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv01"
-                        android:paddingTop="3dp"
-                        android:text="8:00am - 10:00pm"/>
-                    <TextView android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Open"
-                        android:textColor="@color/blue"
-                        android:textSize="18dp"
-                        android:drawableRight="@drawable/bt_next_blue"
-                        android:drawablePadding="3dp"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true"
-                        android:id="@+id/tvWellesCafeStatus"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/btn_cafeteria_richardson"
-                    android:layout_width="fill_parent"
+                    android:textSize="20dp"
+                    android:textColor="@color/white"
+                    android:text="Open for 1 more hour, util 11:30 am"
+                    android:drawablePadding="3dp"
+                    android:drawableRight="@drawable/icon_arrow_expand_drawer"/>
+                <TextView android:id="@+id/fragment_cafeteria_tvTimeDetail"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
-                    android:background="@drawable/btn_whitebackground"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:id="@+id/tv02"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:text="@string/label_cafeteria_richardson"
-                        android:textSize="18dp"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"
-                        android:layout_alignParentTop="true"/>
-                    <TextView android:id="@+id/tvRichardsonCafe"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv02"
-                        android:paddingTop="3dp"
-                        android:text="8:00am - 10:00pm"/>
-                    <TextView android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Open"
-                        android:textColor="@color/blue"
-                        android:textSize="18dp"
-                        android:drawableRight="@drawable/bt_next_blue"
-                        android:drawablePadding="3dp"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true"
-                        android:id="@+id/tvRichardsonCafeStatus"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_marginTop="1dp"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/btn_whitebackground"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:id="@+id/tv03"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:text="@string/label_cafeteria_bookClub"
-                        android:textSize="18dp"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"
-                        android:layout_alignParentTop="true"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv03"
-                        android:layout_marginRight="5dp"
-                        android:paddingTop="3dp"
-                        android:text="8:00am - 10:00pm"
-                        />
-
-                    <TextView android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Open"
-                        android:textColor="@color/blue"
-                        android:textSize="18dp"
-                        android:drawableRight="@drawable/bt_next_blue"
-                        android:drawablePadding="3dp"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true"
-                        android:id="@+id/tvBookCafeStatus"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/btn_cafeteria_phone"
-                    android:layout_marginTop="5dp"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/btn_whitebackground"
-                    android:padding="10dp">
-                    <ImageView
-                        android:id="@+id/img01"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/phone"
-                        android:layout_alignParentLeft="true"/>
-                    <TextView
-                        android:id="@+id/tv04"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:text="@string/label_cafeteria_contact"
-                        android:textSize="12dp"
-                        android:layout_alignParentTop="true"
-                        android:layout_toRightOf="@+id/img01"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv04"
-                        android:text="@string/label_cafeteria_phone"
-                        android:layout_toRightOf="@+id/img01"
-                        android:layout_marginRight="5dp"
-                        android:textSize="14dp"/>
-                </RelativeLayout>
+                    android:visibility="gone"
+                    android:textSize="18dp"
+                    android:paddingTop="5dp"
+                    android:textColor="@color/white"
+                    android:text="M-F 8:00-10:00pm\nSaturdays 12:00-6:00pm\nSundays 10-7pm"/>
 
             </LinearLayout>
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp">
+                <LinearLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:orientation="vertical">
+                    <TextView android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Breakfast"
+                        android:textColor="@color/black"
+                        android:textSize="22dp"/>
+                    <TextView android:id="@+id/fragment_cafeteria_tvMainLine"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="Main Line"
+                        android:textSize="18dp"/>
+                    <LinearLayout android:id="@+id/fragment_cafeteria_llMainLine"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:orientation="vertical">
+                    </LinearLayout>
+                    <TextView android:id="@+id/fragment_cafeteria_tvInternationalCorner"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="International Corner"
+                        android:textSize="18dp"/>
+                    <LinearLayout android:id="@+id/fragment_cafeteria_llInternationalCorner"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:orientation="vertical"/>
+
+                    <View android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/black"/>
+                    <TextView android:id="@+id/fragment_cafeteria_tvViewMore"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="View More"
+                        android:textSize="22dp"
+                        android:gravity="right"
+                        android:textColor="@color/Orange"/>
+
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp">
+                <LinearLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:orientation="vertical">
+                    <TextView android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Lunch"
+                        android:textColor="@color/black"
+                        android:textSize="22dp"/>
+                    <TextView android:id="@+id/fragment_cafeteria_tvMainLine1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="Main Line"
+                        android:textSize="18dp"/>
+                    <LinearLayout android:id="@+id/fragment_cafeteria_llMainLine1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:orientation="vertical">
+                    </LinearLayout>
+                    <TextView android:id="@+id/fragment_cafeteria_tvInternationalCorner1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="International Corner"
+                        android:textSize="18dp"/>
+                    <LinearLayout android:id="@+id/fragment_cafeteria_llInternationalCorner1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:orientation="vertical"/>
+
+                    <View android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/black"/>
+                    <TextView android:id="@+id/fragment_cafeteria_tvViewMore1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="View More"
+                        android:textSize="22dp"
+                        android:gravity="right"
+                        android:textColor="@color/Orange"/>
+
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
         </LinearLayout>
     </ScrollView>
 
