--- a/app/src/main/res/layout/fragment_cafeteria.xml
+++ b/app/src/main/res/layout/fragment_cafeteria.xml
@@ -1,14 +1,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/WhiteSmoke"
     tools:context="com.techhab.collegeapp.CafeteriaFragment">
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
         <LinearLayout
             android:orientation="vertical"
             android:id="@+id/panel_side_cafeteria"
@@ -40,123 +38,12 @@
                     android:text="M-F 8:00-10:00pm\nSaturdays 12:00-6:00pm\nSundays 10-7pm"/>
 
             </LinearLayout>
-            <android.support.v7.widget.CardView
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/fragment_cafeteria_rvMenu"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp">
-                <LinearLayout android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:orientation="vertical">
-                    <TextView android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Breakfast"
-                        android:textColor="@color/black"
-                        android:textSize="22dp"/>
-                    <TextView android:id="@+id/fragment_cafeteria_tvMainLine"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
-                        android:text="Main Line"
-                        android:textSize="18dp"/>
-                    <LinearLayout android:id="@+id/fragment_cafeteria_llMainLine"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:orientation="vertical">
-                    </LinearLayout>
-                    <TextView android:id="@+id/fragment_cafeteria_tvInternationalCorner"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
-                        android:text="International Corner"
-                        android:textSize="18dp"/>
-                    <LinearLayout android:id="@+id/fragment_cafeteria_llInternationalCorner"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:orientation="vertical"/>
-
-                    <View android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/black"/>
-                    <TextView android:id="@+id/fragment_cafeteria_tvViewMore"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:text="View More"
-                        android:textSize="22dp"
-                        android:gravity="right"
-                        android:textColor="@color/Orange"/>
-
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp">
-                <LinearLayout android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:orientation="vertical">
-                    <TextView android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Lunch"
-                        android:textColor="@color/black"
-                        android:textSize="22dp"/>
-                    <TextView android:id="@+id/fragment_cafeteria_tvMainLine1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
-                        android:text="Main Line"
-                        android:textSize="18dp"/>
-                    <LinearLayout android:id="@+id/fragment_cafeteria_llMainLine1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:orientation="vertical">
-                    </LinearLayout>
-                    <TextView android:id="@+id/fragment_cafeteria_tvInternationalCorner1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
-                        android:text="International Corner"
-                        android:textSize="18dp"/>
-                    <LinearLayout android:id="@+id/fragment_cafeteria_llInternationalCorner1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:orientation="vertical"/>
-
-                    <View android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/black"/>
-                    <TextView android:id="@+id/fragment_cafeteria_tvViewMore1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:text="View More"
-                        android:textSize="22dp"
-                        android:gravity="right"
-                        android:textColor="@color/Orange"/>
-
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
-    </ScrollView>
-
 
 </FrameLayout>
